# climemu

./: .gitignore  LICENSE  README.md  compute_test_power.py  estimate_sigma_max.py  losses.eps  plot_cmip7.py  plot_losses.py  precompute_gmst.py  pyproject.toml
.github/workflows/: ci.yml
docs/: paper.md  reproducepaper.md
eof/: decodesysargs.py  geteof.py
examples/: README.md  collab-demo.ipynb  demo.ipynb  draw_sample.py  draw_sample_mpi.ipynb  draw_sample_mpi.py  utils.py
experiments/access/: config.py  data.py  main.py  trainer.py  utils.py
experiments/access/inference/: piControl.py  ssp245.py
experiments/access/plots/piControl/: plot_correlations.py  plot_emd.py  plot_entropy_hurs.py  plot_moments.py  plot_power_spectra.py  plot_psd.py  utils.py
experiments/access/plots/ssp245/: plot_bias_extremes.py  plot_distribution_shift.py  plot_portrait.py  plot_tails.py  utils.py
experiments/access/plots/ssp370/: plot_ToE.py  plot_hovmoller.py  plot_tas_hurs_trends.py  plot_zonal_wind.py  utils.py
experiments/intermodel/plots/ssp245/: plot_intermodel_portrait.py  utils.py
experiments/miroc/: config.py  data.py  main.py  utils.py
experiments/miroc/inference/: historical.py
experiments/miroc/plots/historical/: utils.py
experiments/miroc/plots/piControl/: plot_artefact.py  plot_correlations.py  plot_emd.py  plot_moments.py  plot_overfitting.py  plot_power_spectra.py  plot_seasonal_shift.py  utils.py
experiments/miroc/plots/ssp245/: plot_bias_extremes.py  plot_distribution_shift.py  plot_portrait.py  plot_tails.py  utils.py
experiments/miroc/plots/ssp370/: plot_ToE.py  plot_hovmoller.py  plot_tas_hurs_trends.py  plot_zonal_wind.py  utils.py
experiments/mpi/: config.py  data.py  main.py  trainer.py  utils.py
experiments/mpi/inference/: piControl.py  ssp370.py
experiments/mpi/plots/piControl/: plot_correlations.py  plot_emd.py  plot_emd_examples.py  plot_mollified.py  plot_moments.py  plot_overfitting.py  plot_power_spectra.py  plot_seasonal_shift.py  utils.py
experiments/mpi/plots/ssp245/: plot_bias_extremes.py  plot_bias_extremes_significance.py  plot_distribution_shift.py  plot_portrait.py  plot_tails.py  utils.py
experiments/mpi/plots/ssp370/: plot_ToE.py  (+4 more)
experiments/mpisong/: main.py  trainer.py
experiments/mpisong/inference/: piControl.py
paper/: README.md  plot_ssps.py
paper/access/: config.py  main.py  trainer.py  utils.py
paper/access/inference/: historical.py  ssp370.py
paper/intermodel/: plot_intermodel_portrait.py  plot_losses.py  utils.py
paper/miroc/: config.py  data.py  trainer.py  utils.py
paper/misc/baseline-benchmark/: config.py
paper/misc/cmip7-medium-scenario/: inference.py  plot.py  prepare_plot_data.py
paper/misc/mpi-no-overfitting/: main.py  trainer.py
paper/mpi/: config.py  data.py  trainer.py  utils.py
paper/mpi/misc/: emulate_scenario_M.py
paper/mpi_no_overfitting/: config.py  data.py
src/climemu/: __init__.py
src/climemu/emulators/: __init__.py  abstractemulator.py  bouabid2025.py
src/climemu/utils/: __init__.py  registry.py
src/datasets/: __init__.py  cmip6.py  constants.py  pattern_to_cmip6.py
src/diffusion/: __init__.py
src/diffusion/losses/: __init__.py  denoising_score_matching.py  denoising_score_matching_doy.py
src/diffusion/nn/: __init__.py  healpixunet.py  healpixunet_doy.py  healpixunetbis.py
src/diffusion/samplers/: __init__.py
src/diffusion/schedules/: variance_exploding.py
src/losses/: __init__.py  denoising_score_matching.py
src/models/: __init__.py
src/models/networks/: healpixunet.py
src/samplers/: continuous_ode_sampler.py
src/schedules/: __init__.py
src/utils/: collate.py
src/utils/arrays/: __init__.py  aggregate.py  convert.py  filter.py  reshape.py  smooth.py
src/utils/graphs/: __init__.py  haversine.py
src/utils/trees/: __init__.py  filter.py
tests/: __init__.py  conftest.py
tests/unit/climemu/: __init__.py  test_abstract_emulator.py  test_bouabid2025.py  test_bouabid2025_real_mpi_load.py  test_factory.py  test_registered_emulators.py  test_registry.py
(+79 files in other folders)
