[project]
name = "jax-esm-emulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "dask>=2025.7.0",
    "diffrax>=0.7.0",
    "equinox>=0.13.0",
    "jax[cuda12]>=0.7.1",
    "matplotlib>=3.10.6",
    "netcdf4>=1.7.2",
    "numpy>=2.3.2",
    "optax>=0.2.5",
    "pandas>=2.3.2",
    "pyshtools>=4.13.1",
    "regionmask>=0.13.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "wandb>=0.21.3",
    "xarray>=2025.9.0",
]
